- make xen_version globally available, with macros to access major and   minor xen version. - In xen_initclocks(), do a VCPUOP_stop_periodic_timer only for Xen 3.1   and later Should fix PR port-xen/45961