sys/arch/xen/include/hypervisor.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: hypervisor.h,v 1.37 2012/02/17 18:40:19 bouyer Exp $	*/
+/*	$NetBSD: hypervisor.h,v 1.38 2012/02/17 18:42:19 bouyer Exp $	*/
 
 /*
  * Copyright (c) 2006 Manuel Bouyer.
@@ -131,6 +131,10 @@ struct intrframe;
 struct cpu_info;
 void do_hypervisor_callback(struct intrframe *regs);
 void hypervisor_enable_event(unsigned int);
+
+extern int xen_version;
+#define XEN_MAJOR(x) (((x) & 0xffff0000) >> 16)
+#define XEN_MINOR(x) ((x) & 0x0000ffff)
 
 /* hypervisor_machdep.c */
 void hypervisor_send_event(struct cpu_info *, unsigned int);
